		get: self documenting
		post: process
		- just accepts a single domain,
		- run the entire ACME process using the global account key in a single request
		- returns an openresty config payload
- autocert support
- added routes to update recents for a domain and fqdnset
- standardize url_template for json as just adding '.json' instead of calculating a whole new one

0.4.0
unreleased (2020-01-23)
- implement ACME v2
- removed support for ACME v1
- added `pyproject.yaml`
- Python3 support
	- most file usage moved to context managers
	- subprocess.Popen replaced now wrapped in context manager
	- subprocess.Popen replaced with psutil.Popen, which provides a contextmanger on Python2
- several changes to the database design; please start with a new database
- standardizes newlines for storage
- reorganized code, so Pyramid App is now a sub-package


0.3.0
2019.09.10
- black
- requires pyramid_formencode_classic>=0.4.0
---
- fixed some sql comparisons that compiled oddly in sqlite
- added route: /admin/certificates/active
- added route: /admin/certificates/inactive


0.2.1
2018.07.11
---
- now requiring pyramid_formencode_classic==0.2.2
-- this inherently requires formencode v2.0.0a1
- now requiring pyramid_debugtoolbar>=4.4
- made a formhandling custom library


0.2.0
2018.05.21
---
- updating some functionality for imports
- some ux fixes
- the nginx status tools now return a better json payload
- adding a settings panel that documents all the config options
- adding more json endpoints for easier commandline work
- private keys can now be marked as default
- SQL Changes
    ALTER TABLE ssl_acme_account_key ADD acme_account_provider_id INTEGER;
    ALTER TABLE ssl_acme_account_key ALTER acme_account_provider_id SET NOT NULL;
    ALTER TABLE ssl_certificate_request RENAME ssl_letsencrypt_account_key_id TO ssl_acme_account_key_id;
    ALTER TABLE ssl_letsencrypt_account_key RENAME TO ssl_acme_account_key;